Fixed horizontal rule spacing

--- a/scss/abstract/typography.scss
+++ b/scss/abstract/typography.scss
@@ -118,10 +118,6 @@ hr {
   margin-block: var(--size-4-6);
 }
 
-.markdown-source-view.mod-cm6.is-live-preview hr {
-  margin-block: calc(var(--size-4-10) * 0.5);
-}
-
 .internal-link,
 .external-link {
   &,
